--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,5 +17,7 @@
 // $link: $pink;
 // $widescreen-enabled: false;
 // $fullhd-enabled: false;
+$input-focus-box-shadow-color: none;
 
 @import "~bulma/bulma";
+
