update home page design.

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -11,7 +11,6 @@ $beige-light: #575756;
 $beige-lighter: #EFF0EB;
 // Update Bulma's global variables
 $family-sans-serif: "Nunito", sans-serif;
-$grey-dark: $brown;
 $primary: $persian_gn;
 $link: $green;
 $input-focus-box-shadow-color: none;
@@ -29,12 +28,25 @@ body {
 }
 
 .about-us {
-    margin: 5em 2.5em 5em;
+    // margin: 5em 2.5em 5em;
+    padding: 2em;
      .title {
          font-weight: 300;
          color: $beige-light;
          margin-bottom: 2em;
      }
+
+     .sb::before {
+        content: "";
+        background-color: $green;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 1.5em;
+        right: 1.5em;
+        z-index: 1;
+    }
+
      .read-more {
          display: inline-block;
          margin-top: 2.5em;
@@ -42,11 +54,12 @@ body {
 }
 
 .articles-section {
-    margin-bottom: 10em;
+    margin-top: 5em;
+    margin-bottom: 5em;
     .title {
         font-weight: 300;
         color: $beige-light;
-        margin-bottom: 2em;
+        margin-bottom: 1em;
     }
     .media-content {
         a {
@@ -58,6 +71,15 @@ body {
     }
 }
 
+.sub-input {
+    box-shadow: none;
+    border: none; 
+    // border-bottom: 2px solid #4a4a4a; 
+    margin-bottom: 1em; 
+    width: 35em; 
+    align-self: center;
+}
+
 .green-hover {
     transition: all 0.25s ease-in;
     border-bottom: 5px solid transparent;
@@ -66,6 +88,15 @@ body {
         border: none;
         border-bottom: 5px solid $persian_gn;
     }
+}
+
+.overlay::before {
+    content: "";
+    background: $persian_gn;
+    opacity: 0.5;
+    width: 100%;
+    height: 100%;
+    position: absolute;
 }
 
 .footer-content-color {
