--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -23,6 +23,9 @@ $input-focus-box-shadow-color: none;
 @import "./aboutSection.scss";
 @import "./overlayBg.scss";
 
+html {
+    scroll-behavior: smooth;
+}
 body {
 	background-color: #e6e6e6;
 }
